Fix workspace hover color in waybar style.css

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -58,7 +58,8 @@ button:hover {
 }
 
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(24, 24, 37, 1);
+    border-radius: 20px;
 }
 
 #workspaces button.focused {
